--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
   {% if page.hidden %}<meta name="robots" content="noindex">{% endif %}
   <meta name="theme-color" content="#ffa726">
   <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.ico">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap">
   <link rel="stylesheet" type="text/css" href="/assets/main.css">
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace: 'index.html', '' }}">
 </head>
