--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -14,7 +14,7 @@
 <div id="h{{ include.stockId }}" class="element{{ firstCardInfo.element }}">
     <div class="heroinfobox">
         <div class="header">
-            <div class="name">{{ page.title }}</div>
+            <div class="name">{{ firstCardInfo.stockId | stockIdToCharaTitle: 1 }}</div>
             <div class="sub">{{ firstCardInfo.cardName }}</div>
         </div>
         {% include atlas-gallery.html sprites=sprites %}
