Restrict CSS transition to transform only

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -54,7 +54,7 @@ a:hover {
   width: 250px;
   position: fixed;
   transform: translateX(-250px);
-  transition: all 0.15s ease;
+  transition: transform 0.15s ease;
   z-index: 2;
   height: 100vh;
   -webkit-overflow-scrolling: touch;
