CSS contain: content

--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -11,7 +11,7 @@
 {% assign sprites = sprites | append: "," | append: include.extra_sprites %}
 {% endif %}
 
-<div id="s{{ include.stockId }}" class="elementNone">
+<div id="s{{ include.stockId }}" class="contain elementNone">
     <div class="heroinfobox">
         <div class="header">
             <div class="name">{{ page.title }}</div>
