--- a/_includes/hero-infobox-unreleased.html
+++ b/_includes/hero-infobox-unreleased.html
@@ -5,7 +5,7 @@ who do not wish to be spoiled about future content.</p>
 </blockquote>
 {% endif %}
 
-<div class="elementNone">
+<div class="contain elementNone">
     <div class="heroinfobox">
         <div class="header">
             <div class="name">{{ include.name | default: page.title }}</div>
