--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -11,7 +11,7 @@
 {% assign sprites = sprites | append: "," | append: include.extra_sprites %}
 {% endif %}
 
-<div id="h{{ include.stockId }}" class="element{{ firstCardInfo.element }}">
+<div id="h{{ include.stockId }}" class="contain element{{ firstCardInfo.element }}">
     <div class="heroinfobox">
         <div class="header">
             <div class="name">{{ firstCardInfo.stockId | stockIdToCharaTitle: 1 }}</div>
