--- a/_includes/skill-timing.html
+++ b/_includes/skill-timing.html
@@ -27,6 +27,8 @@ battle win
 AI choose target
 {% when 13 %}
 after using non-attacking skill
+{% when 14 %}
+when leaving
 {% else %}
 unknown timing ({{ include.timing }})
 {% endcase %}
