--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -67,7 +67,7 @@ Deal {{ effect.parameter.value }}% of damage and extra {{ effect.parameter.addMu
 {% when "ComboDamage" %}
 Deal {{ effect.parameter.value }}% of damage and {{ effect.parameter.value | times: effect.parameter.combpMult | divided_by: 100.0 }}% extra for each combo to {{ target }}
 {% when "ElementPenetrateDamage" %}
-ATK {% if effect.parameter.value >= 100 %}Up{% else %}Down{% endif %} to {{ target }} by {{ effect.parameter.value | divided_by: 100.0 }}x against advantageous elements
+Deal {{ effect.parameter.value }}% of damage to {{ target }} regardless of elemental advantage
 {% when "Wait" %}
 Make {{ target }} go last
 {% when "CounterAttack" %}
