:confetti_ball: Wiki birthday!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,12 @@ layout: compress
 {% include header.html %}
 <main class="content__area">
 <div class="content">
-    <aside class="clearfix">    
+    <aside class="wiki-msg">    
+        :confetti_ball: 23 September is this wiki's birthday! We are interested in learning about your experience,
+        this <a href="https://docs.google.com/forms/d/e/1FAIpQLSf4zzVPAhdyaaKyZP7v4ef-2XCMLQsG5EGfLxZHPHWCxRT2jg/viewform?usp=sf_link">survey</a>
+        will take roughly 5 minutes to complete. (<a href="/blog/">Wiki Update</a>)
+    </aside>
+    <aside class="clearfix">
     <button class="menu-button">
         <span aria-hidden="true"><svg height="16" viewBox="0 0 12 16" width="12" xmlns="http://www.w3.org/2000/svg"><path d="m11.41 9h-10.82c-.59 0-.59-.41-.59-1s0-1 .59-1h10.81c.59 0 .59.41.59 1s0 1-.59 1zm0-4h-10.82c-.59 0-.59-.41-.59-1s0-1 .59-1h10.81c.59 0 .59.41.59 1s0 1-.59 1zm-10.82 6h10.81c.59 0 .59.41.59 1s0 1-.59 1h-10.81c-.59 0-.59-.41-.59-1s0-1 .59-1z"/></svg></span>
         <span>Menu</span>
