--- a/assets/main.scss
+++ b/assets/main.scss
@@ -32,6 +32,10 @@ header {
   clear: both;
   display: table;
 }
+.wiki-msg {
+  padding: 10px;
+  background: #cce7ff;
+}
 a {
   color: $colorDark;
   text-decoration: none;
