--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content">
     <aside class="wiki-msg">    
-        :confetti_ball: 23 September is this wiki's birthday! We are interested in learning about your experience,
-        this <a href="https://docs.google.com/forms/d/e/1FAIpQLSf4zzVPAhdyaaKyZP7v4ef-2XCMLQsG5EGfLxZHPHWCxRT2jg/viewform?usp=sf_link">survey</a>
-        will take roughly 5 minutes to complete. (<a href="/blog/">Wiki Update</a>)
+        :confetti_ball: Wiki Survey 2021 result is finally out. Read it in <a href="/blog/">Wiki Update</a>.
     </aside>
     <aside class="clearfix">
     <button class="menu-button">
