--- a/assets/main.scss
+++ b/assets/main.scss
@@ -505,6 +505,11 @@ $elementName: fire, water, earth, light, shadow;
     vertical-align: middle;
   }
 }
+// Skill
+.s-rand-g {
+  margin-top: 10px;
+  padding: 5px;
+}
 // Event page
 .event-infobox {
   border: 2px solid $colorDark;
