--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -26,10 +26,15 @@ Gain {{ effect.parameter.value }}% of self's base view
 {% when "MultipleDefence" %}
 {% assign turnDefinition = "next attack" %}
 {% if effect.parameter.value == 0 %}Ignore incoming damage{% else %}Incoming damage {% if effect.parameter.value >= 100 %}increased{% else %}reduced{% endif %} to {{ effect.parameter.value | divided_by: 100.0 }}x{% endif %} to {{ target }}
+{% when "SpdRateEmitDefence" %}
+{% assign turnDefinition = "next attack" %}
+If {{ effect.parameter.rate }} x "absolute SPD difference" &gt;= ??, {% if effect.parameter.mult == 0 %}ignore incoming damage{% else %}incoming damage {% if effect.parameter.mult >= 100 %}increased{% else %}reduced{% endif %} to {{ effect.parameter.mult | divided_by: 100.0 }}x{% endif %} to {{ target }}
 {% when "ChangeAgi" %}
 SPD {% if effect.parameter.value >= 0 %}Up{% else %}Down{% endif %} by {{ effect.parameter.value }} to {{ target }}
 {% when "RemoveBuff" %}
 Remove {{ effect.parameter.value }} {% if effect.parameter.target %}{{ effect.parameter.target | status_description }} status{% else %}buff(s){% endif %} from {{ target }}
+{% when "CopyBuff" %}
+Copy {{ effect.parameter.value }} {% if effect.parameter.target %}{{ effect.parameter.target | status_description }} status{% else %}buff(s){% endif %} from {{ target }}
 {% when "RemoveSystemEffect" %}
 Remove {{ effect.parameter.value }} {% if effect.parameter.target %}{{ effect.parameter.target | status_description }} status{% else %}system status(es){% endif %} from {{ target }}
 {% when "ComboPlus" %}
