--- a/_includes/header.html
+++ b/_includes/header.html
@@ -116,6 +116,9 @@
           <li>
             <a href="/guide/skill_manual/">Skill Manual</a>
           </li>
+          <li>
+            <a href="/guide/engraving_enhancement/">Engraving Enhancement</a>
+          </li>
         </ul>
         <h3 class="section__header">Tools</h3>
         <ul>
