--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -39,7 +39,7 @@ Copy {{ effect.parameter.value }} {% if effect.parameter.target %}{{ effect.para
 Remove {{ effect.parameter.value }} {% if effect.parameter.target %}{{ effect.parameter.target | status_description }} status{% else %}system status(es){% endif %} from {{ target }}
 {% when "ComboPlus" %}
 Gain {{ effect.parameter.value }} combo(s)
-{% when "AddPlusCombo %}
+{% when "AddPlusCombo" %}
 Gain {{ effect.parameter.value }} combo(s) (Not counted by "when using skill that increases combo")
 {% when "ChangeSkillProve" %}
 Proc rate {% if effect.parameter.value >= 0 %}Up{% else %}Down{% endif %} by {{ effect.parameter.value }} for {{ target }}
