Fix sidekick icon

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -471,6 +471,7 @@ $elementName: fire, water, earth, light, shadow;
 .sidekick-icon img {
   display: block;
   height: 128px;
+  width: 128px;
   right: 0;
   bottom: 0;
   clip-path: polygon(0% 10%, 50% 0%, 95% 10%, 95% 73%, 50% 95%, 0% 73%);
