Implement collection mode
Use chara page to store what units you have

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -497,6 +497,9 @@ $elementName: fire, water, earth, light, shadow;
 .sidekick-4 {
   background-image: url(/cdn/Sprite/ui_frame_s_base_02.png);
 }
+.has-unit {
+  background: $colorLight;
+}
 .item, .status {
   text-decoration: underline dashed 1px;
   text-underline-offset: 2px;
