Add ryekie CQ fan translation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -63,6 +63,12 @@
             <a href="/voice_actors/">Voice Actors</a>
           </li>
           <li>
+            <a href="/main_quests/">Main Quests</a>
+          </li>
+          <li>
+            <a href="/chara_quests/">Character Quests</a>
+          </li>
+          <li>
             <a href="/misc/">More...</a>
           </li>
         </ul>
