--- a/_includes/skill-timing.html
+++ b/_includes/skill-timing.html
@@ -29,6 +29,8 @@ AI choose target
 after using non-attacking skill
 {% when 14 %}
 when leaving
+{% when 17 %}
+when current attack kills the enemy
 {% when 19 %}
 when activating a skill that increases combo
 {% else %}
