--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -91,18 +91,18 @@
 
 <h2>Skills</h2>
     <h3>Active</h3>
-    {% include skill-table.html skillIds=skillIdsActive %}
+    {% include skill-table-v2.html skillIds=skillIdsActive %}
  
     {% if include.extraActiveSkillIds %}
     {% assign extraActiveSkillIds = include.extraActiveSkillIds | split: "," %}
-    {% include skill-table.html skillIds=extraActiveSkillIds hide_banner=true %}
+    {% include skill-table-v2.html skillIds=extraActiveSkillIds hide_banner=true %}
     {% endif %}
 
     <h3>Passive</h3>
-    {% include skill-table.html skillIds=skillIdsPassive %}
+    {% include skill-table-v2.html skillIds=skillIdsPassive %}
 
     {% if include.extraPassiveSkillIds %}
     {% assign extraPassiveSkillIds = include.extraPassiveSkillIds | split: "," %}
-    {% include skill-table.html skillIds=extraPassiveSkillIds hide_banner=true %}
+    {% include skill-table-v2.html skillIds=extraPassiveSkillIds hide_banner=true %}
     {% endif %}
 </div>
