--- a/_includes/header.html
+++ b/_includes/header.html
@@ -125,6 +125,9 @@
           <li>
             <a href="/guide/engraving_enhancement/">Engraving Enhancement</a>
           </li>
+          <li>
+            <a href="/guide/office/">Office</a>
+          </li>
         </ul>
         <h3 class="section__header">Tools</h3>
         <ul>
