--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -93,7 +93,7 @@ ATK Up by {{ effect.parameter.value }}% to {{ effect.parameter.target | skill_ta
 {% when "Penetration" %}
 Make {{ target }} ignore Taunt
 {% when "TargetMark" %}
-{{ effect.parameter.target | skill_target }} will have higher chance of being targeted when opponent is in auto action Mode
+{{ target }} will have higher chance of being targeted when opponent is in auto action Mode
 {% when "NoneEffectElapseTurnDamageAndTurnEnd" %}
 Doesn't seem to do anything (NoneEffectElapseTurnDamageAndTurnEnd)
 {% when "AllAttack" %}
