--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content">
     <aside class="wiki-msg">    
-        :confetti_ball: Wiki Survey 2021 result is finally out. Read it in <a href="/blog/">Wiki Update</a>.
+        :date: <a href="https://docs.google.com/forms/d/e/1FAIpQLSeTrC1NxFb5Y4x7cR3grUz0diLAFDBSNhFa87deoU23F1km2Q/viewform?usp=sf_link">LAH Wiki Survey (2022 edition)</a> is opened, please spend some time to fill it!
     </aside>
     <aside class="clearfix">
     <button class="menu-button">
