New survey result

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,9 @@
             <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/">Open source</a>
           </li>
           <li>
+            <a href="/blog/">Wiki Blog</a>
+          </li>
+          <li>
             <a href="/faq/">FAQ</a>
           </li>
         </ul>
