--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content">
     <aside class="wiki-msg">    
-        :date: <a href="https://docs.google.com/forms/d/e/1FAIpQLSeTrC1NxFb5Y4x7cR3grUz0diLAFDBSNhFa87deoU23F1km2Q/viewform?usp=sf_link">LAH Wiki Survey (2022 edition)</a> is opened, please spend some time to fill it!
+        :confetti_ball: Thank you for participating in LAH Wiki Survey (2022 edition)! <a href="/blog/2022/wiki-survey-2022/">The results are out</a>
     </aside>
     <aside class="clearfix">
     <button class="menu-button">
