--- a/_includes/skill-table.html
+++ b/_includes/skill-table.html
@@ -14,7 +14,9 @@
     {% assign skill = site.data.SkillMaster[sid] %}
     {% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
     <tr>
-        <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td><td title="{{ skill.description }}">{% include skill-description.html skill=skill %}</td><td>{{ skill.useView }}</td>
+        <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td>
+        <td title="{{ skill.description }}">{% include skill-description.html skillId=nid skill=skill %}</td>
+        <td>{{ skill.useView }}</td>
     </tr>
     {% endfor %}
 </table>
