--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,12 @@ layout: compress
     <aside class="wiki-msg">    
         :confetti_ball: Thank you for participating in LAH Wiki Survey (2022 edition)! <a href="/blog/2022/wiki-survey-2022/">The results are out</a>
     </aside>
-    <aside class="clearfix">
+    <aside class="toolbar clearfix">
     <button class="menu-button">
         <span aria-hidden="true"><svg height="16" viewBox="0 0 12 16" width="12" xmlns="http://www.w3.org/2000/svg"><path d="m11.41 9h-10.82c-.59 0-.59-.41-.59-1s0-1 .59-1h10.81c.59 0 .59.41.59 1s0 1-.59 1zm0-4h-10.82c-.59 0-.59-.41-.59-1s0-1 .59-1h10.81c.59 0 .59.41.59 1s0 1-.59 1zm-10.82 6h10.81c.59 0 .59.41.59 1s0 1-.59 1h-10.81c-.59 0-.59-.41-.59-1s0-1 .59-1z"/></svg></span>
         <span>Menu</span>
     </button>
-    <a class="github-button" href="{{ site.github_edit }}/{{ page.path }}">Edit this page</a>
+    <a class="github-button" href="{{ site.github_repo }}/edit/master/{{ page.path }}">Edit this page</a>
     </aside>
 {% include banner.html %}
 {{ content }}
