--- a/assets/main.scss
+++ b/assets/main.scss
@@ -97,17 +97,31 @@ a:hover {
 .sidebar li {
   list-style: none;
 }
+.search-box {
+  margin-bottom: 20px;
+  width: 100%;
+  height: 30px;
+  border: 2px solid #888;
+  border-radius: 2px;
+}
+.toolbar {
+  margin: 20px 0;
+}
 .menu-button, .github-button {
   display: inline-block;
   font-size: 15.75px;
   background: none;
   border: none;
-  margin: 20px 0 20px -10px;
   padding: 10px;
   color: #5E5E5E;
 }
 .github-button {
   float: right;
+}
+.menu-button:hover, .github-button:hover {
+  text-decoration: none;
+  background-color: #ddd;
+  transition: background-color 0.5s ease-out;
 }
 .content__area {
   width: 100%;
