--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -59,6 +59,8 @@ Extend {{ target }}'s {% if effect.parameter.statusTypeValue == 1 %}buff{% else 
 {% when "Heal" %}
 {% assign turnDefinition = "turn" %}
 Heal {{ target }} for {{ effect.parameter.value }}% of own ATK value
+{% when "HealMultipleAttack" %}
+Increase recovery amount of {{ target }}'s healing skill by {{ effect.parameter.value }}%
 {% when "NeedViewChange" %}
 {% assign turnDefinition = "turn" %}
 Skill View cost {% if effect.parameter.value >= 100 %}Up{% else %}Down{% endif %} by {{ effect.parameter.value | divided_by: 100.0 }}x for {{ target }}
@@ -157,6 +159,10 @@ Resurrect {{ target }} to {{ effect.parameter.value }}% HP
 (Auto action) Skill that targets {% if effect.parameter.isTarget %}enemy{% else %}ally{% endif %} will target the highest HP {% if effect.parameter.isTarget %}enemy{% else %}ally{% endif %}
 {% when "AimLowestAtkCharacter" %}
 (Auto action) Skill that targets {% if effect.parameter.isTarget %}enemy{% else %}ally{% endif %} will target the lowest ATK {% if effect.parameter.isTarget %}enemy{% else %}ally{% endif %}
+{% when "AimLeastDamagedCharacter" %}
+(Auto action) Skill that targets {% if effect.parameter.isTarget %}enemy{% else %}ally{% endif %} will target the least damaged {% if effect.parameter.isTarget %}enemy{% else %}ally{% endif %}
+{% when "AimMostDamagedCharacter" %}
+(Auto action) Skill that targets {% if effect.parameter.isTarget %}enemy{% else %}ally{% endif %} will target the most damaged {% if effect.parameter.isTarget %}enemy{% else %}ally{% endif %}
 {% when "AimHighestAtkCharacter" %}
 (Auto action) Skill that targets {% if effect.parameter.isTarget %}enemy{% else %}ally{% endif %} will target the highest ATK {% if effect.parameter.isTarget %}enemy{% else %}ally{% endif %}
 {% when "AimLowestSpdCharacter" %}
